tests/neg/i22311/Test.scala
abstract class A0 extends I1 with I0[Object] { // error
  override def func(s: Object): String = super.func(s)
}
